--- a/index.css
+++ b/index.css
@@ -40,4 +40,10 @@ nav {
   border-radius: 8px;
   font-size: 20px;
   background-color: rgb(116, 141, 240);
+  padding-bottom: 10px;
+  padding-left: 5px;
+}
+footer {
+  display: flex;
+  justify-content: center;
 }
