--- a/index.css
+++ b/index.css
@@ -9,31 +9,32 @@ header {
   align-items: flex-start;
 }
 nav {
-  margin-top: %;
-  padding: 5px;
+  display: flex;
+  justify-content: left;
+  justify-content: space-between;
 }
 .brand {
   color: rgb(42, 165, 155);
   font-size: 40px;
   flex-grow: 1;
   margin-top: 0%;
+  height: 100%;
 }
 
 .baked {
+  list-style-type: none;
   border: 1px double black;
-
   border-radius: 50px;
-  padding: 2px;
-  margin-top: auto;
+  padding: 4px;
+  margin-top: 100%;
   margin-bottom: 20px;
-  margin-left: 10px;
   margin-right: 1vw;
+  background-color: chocolate;
 }
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
 }
 .testimonial {
   border: 1px double rgb(6, 24, 96);
@@ -46,4 +47,8 @@ nav {
 footer {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  border: 5px solid;
+  background-color: black;
+  color: white;
 }
